04_TAD_simples/TAD_03/Resultados/VictorRangel/main/result_compilation.txt
Resultados/VictorRangel/main/filme.c: In function ‘criarFilme’:
Resultados/VictorRangel/main/filme.c:6:11: error: assignment to expression with array type
    6 |     f.nome=nome;
      |           ^
Resultados/VictorRangel/main/filme.c: In function ‘lerFilme’:
Resultados/VictorRangel/main/filme.c:16:16: warning: format ‘%s’ expects argument of type ‘char *’, but argument 3 has type ‘char (*)[20]’ [-Wformat=]
   16 |     scanf("%d,%s,%d,%d",&filme.codigo,&filme.nome,&filme.valor,&filme.qtdEstoque);
      |               ~^                      ~~~~~~~~~~~
      |                |                      |
      |                char *                 char (*)[20]
Resultados/VictorRangel/main/filme.c: At top level:
Resultados/VictorRangel/main/filme.c:39:1: error: expected identifier or ‘(’ before ‘]’ token
   39 | ]
      | ^
